app/globals.css
@import "tailwindcss";

@theme {
  --font-sans: var(--font-inter);
}

:root {
  --background: #ffffff;
  /* white */
  --foreground: #18181b;
  /* zinc-900 */
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans), sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Smooth scrolling for the whole page */
html {
  scroll-behavior: smooth;
}

/* Custom Scrollbar Styles */
::-webkit-scrollbar {
  display: none;
  /* Hide scrollbar for Chrome, Safari and Opera */
}

/* Fallback for firefox & IE/Edge */
* {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

